# RA-Company

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  checklist.md  gpt-5-function-calling.md  gpt-5-structured-model-outputs.md  pyproject.toml  requirements.txt  run.sh
modules/: excel_handler.py  excel_handler_with_pyxl.py  img_extractor.py  info_extractor.py  matcher.py
