[project]
name = "receipt-automation"
version = "0.1.0"
description = "영수증 매칭 자동화 프로토타입"
requires-python = ">=3.8"
dependencies = [
    "msoffcrypto-tool>=5.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "opencv-python>=4.8.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "xlrd>=2.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
